[tool.poetry]
name = "pysparkler"
version = "0.2.dev"
description = "A tool that upgrades your PySpark scripts to Spark 3.3 as per Spark migration Guideline"
authors = ["Dhruv Pratap <dhruv.pratap@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/holdenk/spark-upgrade"
repository = "https://github.com/holdenk/spark-upgrade"
maintainers = [
    "Holden Karau <holden@pigscanfly.ca>",
]


[tool.poetry.dependencies]
python = "^3.10"
libcst = "^0.4.9"
click = "^8.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.2.1"


[tool.poetry.scripts]
pysparkler = "pysparkler.cli:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
src_paths = ["pysparkler/", "tests/"]
profile = 'black'


[[tool.mypy.overrides]]
module = "libcst.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true
